Bulletproofing 1.0